Aggiornamento .gitignore esclude dataset

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,9 @@
 /venv
 /env
 
+#Dataset Pulito 
+/Progetto/Pre-Elaborazione Dati/Dataset_Cleaned_AIS
+
 # File di cache e di compilazione
 __pycache__/
 *.pyc
