--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@
 
 #Dataset Pulito 
 /Progetto/Pre-Elaborazione Dati/Dataset_Pre-Cleaned_AIS
+/Progetto/Pre-Elaborazione Dati/Dataset_Segmentato_15Giorni
+/Progetto/Pre-Elaborazione Dati/Dataset_Stitched_Finale
 
 # File di cache e di compilazione
 __pycache__/
