--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@
 /Progetto/Pre-Elaborazione Dati/Dataset_Pre-Cleaned_AIS
 /Progetto/Pre-Elaborazione Dati/Dataset_Segmentato_15Giorni
 /Progetto/Pre-Elaborazione Dati/Dataset_Stitched_Finale
+/Progetto/Pre-Elaborazione Dati/Dataset
 
 # File di cache e di compilazione
 __pycache__/
