--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 /Progetto/Pre-Elaborazione Dati/Dataset_Segmentato_15Giorni
 /Progetto/Pre-Elaborazione Dati/Dataset_Stitched_Finale
 /Progetto/Pre-Elaborazione Dati/Dataset
+/Progetto/LNN/old csv/
 
 # File di cache e di compilazione
 __pycache__/
